Name: truelevel
Version: 0.1
License: BSD3
License-File: COPYING
Copyright: Copyright (C) 2006-2007 Bart Massey
Author: Bart Massey <bart@cs.pdx.edu>
Maintainer: Bart Massey <bart@cs.pdx.edu>
Stability: Alpha
Synopsis: audio compressor
Build-Depends: base, haskell98, WAVE, ParseArgs

Executable: truelevel
Main-Is: truelevel.hs
